--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -16,7 +16,7 @@ header {
      color: #fff;
      height: 55px;
      width: 100%;
-     padding: 5px;
+     padding: 0px;
      margin: 0px;
      opacity: 0.7;
      position: fixed;
@@ -26,10 +26,11 @@ header {
 
 .header-left {
     float: left;
-
+    height: 100%;
 }
 .header-right {
     float: right;
+    height: 100%;
 
 }
 .header-logo {
@@ -41,21 +42,36 @@ header {
 .header-nav a {
     text-decoration: none;
     color: white;
+    display: inline-block;
+    width: 100%;
+    height: 55px;
 }
 .header-nav a:visited {
     color: white;
 }
+.header-nav a:hover {
+    background-color: navy;
+
+}
+.header-nav ul {
+    padding: 0px;
+    margin: 0px;
+    height: 100%;
+}
 .header-nav li {
     list-style: none;
     float: left;
-    padding-right: 30px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 14px;
+    width: 100px;
+    line-height: 55px;
+    text-align: center;
     
 }
 .header-nav li:hover {
     color: #000;
 }
+
 .menu-icon {
     float: right;
     display: none;
