--- a/templates/header.html
+++ b/templates/header.html
@@ -10,11 +10,16 @@
             <div class="header-right">
                 <div class="header-nav">
                     <ul>
+                        
                         <li><a href="default.html">Home</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+
+
                         <li><a href="tools.html">Tools</a></li>
                         <li><a href="training.html">Training</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="contact.html" >Contact</a></li>
                         <li><a href="kids.html">For Kids</a></li>
+      
                     </ul>
                 </div>
             </div>
