--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
                 <div class="header-nav">
                     <ul>
                         
-                        <li><a href="default.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
 
 
                         <li><a href="tools.html">Tools</a></li>
