--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -43,9 +43,10 @@
     .header-nav {
         display: none;
     }
+
     .banner-wrapper {
-        padding-top: 40px;
-        height: 75px;
+        padding-top: 15px;
+        height: 125px;
         text-align: center;
     }
 
@@ -57,20 +58,45 @@
     }
     
     .text-content h1 {
-        font-size: 12px;
+        font-size: 16px;
 
     }
     .sub-heading {
-        font-size: 10px;
+        font-size: 15px;
         height: 20px;
         line-height: 20px;
+    }
+    .menu-wrapper {
+        height: 100vh;
+    }
+    .menu-items {
+        width: 100%;
+        height: 100px;
     }
     .item-box {
         width: 80%;
         padding-bottom: 15px;
     }
+    .pageheader-wrapper {
+        height: 75px;
+        padding-top: 25px;
+    }
+    .pageheader-wrapper h1 {
+        font-size: 22px;
+    }
+    .section-heading {
+        margin-top: 10px;
+        font-size: 14px;
+        line-height: 20px;
+    }
+    .tool-header {
+        padding-top: 10px;
+        font-size: 16px;
+    }
     .tool {
         width: 100%;
     }
-
+    .tool .description {
+        font-size: 14px;
+    }
 }
