--- a/templates/header.html
+++ b/templates/header.html
@@ -4,22 +4,18 @@
                 <div class="header-logo">DotNetMomma</div>
 
             </div>
-            <div class="menu-icon">
-                <span class="fa fa-bars"></span>
-            </div>
             <div class="header-right">
-                <div class="header-nav">
-                    <ul>
-                        
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="tools.html">Tools</a></li>
-                        <li><a href="training.html">Training</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html" >Contact</a></li>
-                        <li><a href="kids.html">For Kids</a></li>
-      
-                    </ul>
-                </div>
+                <div class="navbar">
+                <div class="navbar-toggle" onclick="classToggle()"><i class="fas fa-bars"></i></div>
+                <nav class="navbar-items">
+                    <div class="navbar-links"><a href="index.html">Home</a></div>
+                    <div class="navbar-links"><a href="tools.html">Tools</a></div>
+                    <div class="navbar-links"><a href="training.html">Training</a></div>
+                    <div class="navbar-links"><a href="blog.html">Blog</a></div>
+                    <div class="navbar-links"><a href="contact.html" >Contact</a></div>
+                    <div class="navbar-links"><a href="kids.html">For Kids</a></div>
+                </nav>
+            </div>
             </div>
         </div>
   
