--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -14,7 +14,7 @@ a {
 header {
      background-color:#4d4dff;
      color: #fff;
-     height: 55px;
+     /* height: 55px; */
      width: 100%;
      padding: 0px;
      margin: 0px;
@@ -27,11 +27,12 @@ header {
 .header-left {
     float: left;
     height: 100%;
+    padding-left: 16px;
 }
 .header-right {
     float: right;
     height: 100%;
-
+    padding-right: 16px;
 }
 .header-logo {
     font-size: 25px;
@@ -39,43 +40,40 @@ header {
     font-family: 'Permanent Marker', cursive;
     
 }
-.header-nav a {
+.navbar {
+    display: flex;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+}
+.navbar-toggle {
+    display: none;
+}
+
+.navbar-items {
+    margin-right: auto;
+    display: flex;
+}
+.navbar-links {
+    padding-right: 8px;
+    width: 100px;
+    line-height: 55px;
+    text-align: center;
+}
+.navbar-links a {
     text-decoration: none;
     color: white;
     display: inline-block;
     width: 100%;
-    height: 55px;
 }
-.header-nav a:visited {
+.navbar-links a:visited {
     color: white;
 }
-.header-nav a:hover {
+.navbar-links a:hover {
     background-color: navy;
-
-}
-.header-nav ul {
-    padding: 0px;
-    margin: 0px;
-    height: 100%;
-}
-.header-nav li {
-    list-style: none;
-    float: left;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
-    width: 100px;
-    line-height: 55px;
-    text-align: center;
-    
-}
-.header-nav li:hover {
-    color: #000;
 }
 
-.menu-icon {
-    float: right;
-    display: none;
-}
+
+
 
 
 
