New branch created
Made changes to include jQuery

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: "Lucida Grande";
+   
 }
 a {
     text-decoration: none;
@@ -9,10 +10,11 @@ a {
 .container {
     margin: 0 auto;
     width: 100%;
-    max-width: 1170px;
+    max-width: 1080px;
 }
 header {
-     background-color:#4d4dff;
+     /* background-color:#4d4dff; */
+     background-color: #233656;
      color: #fff;
      /* height: 55px; */
      width: 100%;
@@ -107,6 +109,7 @@ header {
     letter-spacing: 5px;
     font-family: 'Luckiest Guy', cursive;
     color: #000066;
+    
 }
 
 .sub-heading {
@@ -263,38 +266,86 @@ header {
 }
 
 /* Tools */
+
+
 .tools-wrapper {
     padding-bottom: 50px;
+    
 }
 .tools-wrapper p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 18px;
+    
 }
-.tool-header {
-    padding-top: 50px;
+.tools-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.tool-list-wrapper {
+    flex-basis: 48%;
+  
+}
+.tool-header-wrapper {
+    display: flex;
+    align-items: center;
+    background-color: #415B76;
+    border-radius: 1rem;
+    border: 2px solid #415B76;
+    padding: .5rem 1rem;
+    margin-top: 1rem;
+    color: #EEF4F2;
+}
+.tool-header-open {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.tool-header .fas {
+    margin-right: .7rem;
 }
 .tool-header, .links-wrapper h1  {
-    font-size: 20px;
-    font-family: 'Luckiest Guy', cursive;
-    color: #000066;
+    font-size: 1rem;
+    font-family: 'Permanent Marker', cursive;
+    /* font-family: 'Luckiest Guy', cursive; */
+    letter-spacing: .2rem;
 }
+.tool-header {
+    /* padding-top: 50px; */
+    flex-basis: 90%;
+}
+
+.tool-button {
+    flex-basis: 10%;
+    text-align: right;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .toollist {
     display: flex;
     flex-wrap: wrap;
+    display: none;
+    border: 2px solid #415B76;
+    background-color: #CDD6D5;
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    padding: .5rem;
+}
+.open-toollist {
+    display: block;
 }
 .tool {
-    vertical-align: top;
+    /* vertical-align: top; */
     height: 75px;
-    width: 45%;
-    background-color: #cceeff;
+    flex-basis: 48%;
     font-size: 14px;
     color: black;
     font-weight: bold;
     padding-left: 20px;
+
 }
-.tool:hover {
-    background-color: #808080;
-}
+
 .toollist .icons {
     font-size: 25px;
     padding-right: 15px;
@@ -304,17 +355,20 @@ header {
     display:none;
 }
 .tool a {
-    display: inline-block;
+    display: block;
     height: 100%;
     width: 100%;
+    color: black;
 }
+
 .tool a:visited {
     color: black;
 }
 .tool a:hover {
-    color: white;
-
+    /* color: white; */
+    color: #415B76;
 }
+
 .tool item-desc {
     line-height: 75px;
 }
@@ -372,4 +426,5 @@ footer {
     width: 100%;
     height: 60px;
     background-color:#4d4dff;
+    display: none;
 }
